--- a/docs/dissertation/refs.bib
+++ b/docs/dissertation/refs.bib
@@ -150,3 +150,12 @@
     year="2015",
     note="University of Cambridge Part IA CST course notes"
 }
+
+@inproceedings{westfeld1999attacks,
+  title={Attacks on steganographic systems},
+  author={Westfeld, Andreas and Pfitzmann, Andreas},
+  booktitle={Information Hiding},
+  pages={61--76},
+  year={1999},
+  organization={Springer}
+}
